--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group = 'com.mziuri'
+group = 'org.example'
 version = '1.0-SNAPSHOT'
 
 repositories {
@@ -10,10 +10,11 @@ repositories {
 }
 
 dependencies {
-
     compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
     implementation "org.apache.tomcat.embed:tomcat-embed-core:10.0.20"
     implementation "org.apache.tomcat.embed:tomcat-embed-jasper:10.0.20"
+
+    implementation 'com.mysql:mysql-connector-j:8.3.0'
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
